--- a/index.html
+++ b/index.html
@@ -106,14 +106,157 @@
                 <h1 class="section-title">Featured Portfolios</h1>
 
                 <div class="grid-3">
+                    <!-- Porfolio 1 -->
                     <div class="portfolio">
                         <div class="portfolio-cover">
-                            
+                           <img src="./assets/portfolio/portfolio 1.jpg" alt="Portfolio 1">
+                        </div>
+
+                        <div class="portfolio-info">
+                            <div class="portfolio-title">
+                                <h4>Logo Design</h4>
+                                <a href="/" class="portfolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portfolio-tags">
+                                <div>Corel Draw</div>
+                                <div>Adobe Ilustrator</div>
+                            </div>
+
+                            <p>
+                                This logo is an abbreviation of my own name, namely Fakhri Muammar = FM. The letters F and M in the logo represent eagle feathers which have a philosophy of courage, freedom and resilience.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Portfolio 2 -->
+                    <div class="portfolio">
+                        <div class="portfolio-cover">
+                           <img src="./assets/portfolio/portfolio 2.jpg" alt="Portfolio 2">
+                        </div>
+
+                        <div class="portfolio-info">
+                            <div class="portfolio-title">
+                                <h4>Mockup Design</h4>
+                                <a href="/" class="portfolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portfolio-tags">
+                                <div>Corel Draw</div>
+                                <div>Adobe Ilustrator</div>
+                            </div>
+
+                            <p>
+                                This is one of the shirt mockups that I have worked on, namely a shirt mockup for a motorbike group or organization, namely PASUKAN GELAP/THE DARK FORCE
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Portfolio 3 -->
+                    <div class="portfolio">
+                        <div class="portfolio-cover">
+                           <img src="./assets/portfolio/portfolio 3.jpg" alt="Portfolio 3">
+                        </div>
+
+                        <div class="portfolio-info">
+                            <div class="portfolio-title">
+                                <h4>Poster Design</h4>
+                                <a href="/" class="portfolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portfolio-tags">
+                                <div>Corel Draw</div>
+                                <div>Adobe Ilustrator</div>
+                            </div>
+
+                            <p>
+                                This is a promotional poster which is promoting photos for graduates with a price promotion for a certain time.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
           </section>
           <!-- End Of Portfolio -->
+
+          <!-- skills and education -->
+           <section id="skills">
+            <div class="skills main-container">
+                <h3 class="pre-title">LEARNING PATH</h3>
+                <h1 class="h1 section-title">Skills & Education</h1>
+
+                <div class="skills-grid">
+                    <div class="skills-left">
+
+                        <!--education 1 -->
+                        <div class="education">
+                            <div class="line">
+                                <div></div>
+                            </div>
+
+                            <div class="education-info">
+                                <h4 class="education-title">SMKN 4 GARUT</h4>
+                                <p>Graphic Designer</p>
+                                <h4 class="education-years">2022 - 2025</h4>
+                            </div>
+                        </div>
+                        
+                        <!-- education 2 -->
+                        <div class="education">
+                            <div class="line">
+                                <div></div>
+                            </div>
+
+                            <div class="education-info">
+                                <h4 class="education-title">SMKN 4 GARUT</h4>
+                                <p>Graphic Designer</p>
+                                <h4 class="education-years">2022 - 2025</h4>
+                            </div>
+                        </div>
+
+                        <!-- education 3 -->
+                        <div class="education">
+                            <div class="line">
+                                <div></div>
+                            </div>
+
+                            <div class="education-info">
+                                <h4 class="education-title">SMKN 4 GARUT</h4>
+                                <p>Graphic Designer</p>
+                                <h4 class="education-years">2022 - 2025</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills-right">
+                        <p>
+                            For 3+ years, I have continued to study in the field of graphic designer and continue to experiment with new software and tools, and here you can see my skills in the field of graphic designer.
+                        </p>
+
+                        <div class="skills-list">
+                            <ul>
+                                <li>Corel Draw</li>
+                                <li>Adobe Ilustrator</li>
+                                <li>Adobe Photoshop</li>
+                                <li>Adobe Lightroom</li>
+                                <li>Adobe Premiere Pro</li>
+                            </ul>
+
+                            <ul>
+                                <li>Alight Motion</li>
+                                <li>Capcut</li>
+                                <li>Canva</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           </section>
+          <!-- End of skills and education -->
     </body>
 </html>
