--- a/index.html
+++ b/index.html
@@ -258,5 +258,10 @@
             </div>
            </section>
           <!-- End of skills and education -->
+
+          <!-- Contact -->
+          <section id="contact"></section>
+          <!-- End Contact -->
+
     </body>
 </html>
