--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fakhri Muammar - Graphic Designer</title>
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/responsive.css" >
     </head>
 
     <body>
 
         <!-- Header -->
          <header>
+            <section id="homes">
             <div class="main-container">
                 <div class="nav">
                     <div class="logo">
@@ -20,11 +22,11 @@
 
                     <nav>
                         <ul>
-                            <li><a href="#service">Services</a></li>
+                            <li><a href="#services">Service</a></li>
                             <li><a href="#portfolios">Portfolio</a></li>
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#contact">Contact</a></li>
-                            <li><a href="#home">Home</a></li>
+                            <li><a href="#homes">Home</a></li>
                         </ul>
                     </nav>
 
@@ -44,15 +46,21 @@
                             in social media. Proficient in using Corel Draw and Adobe Photoshop.
                             Interested in logo design.
                         </p>
-    
                     </div>
-                    <div class="hero-right">
-                        <img src="./assets/hero.svg" alt="Person standing" />
-                    </div>
+                    <aside class="main-container">
+                        <div class="main-banner banner-img-1">
+                            <img src="./assets/hero 1.svg" alt="banner" />
+                        </div>
+                        <div class="main-banner banner-img-2">
+                            <img src="./assets/hero 2.svg" alt="banner" />
+                        </div>
+                        <div class="main-banner banner-img-3">
+                            <img src="./assets/hero 3.svg" alt="banner" />
+                        </div>
+                    </aside>
                 </section>
             </div> 
          </header>
-
         <!-- End of Header -->
 
         <!-- Services -->
@@ -89,9 +97,9 @@
                         <div class="services-icon">
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M6.72 20.492c1.532.956 3.342 1.508 5.28 1.508 1.934 0 3.741-.55 5.272-1.503l1.24 1.582c-1.876 1.215-4.112 1.921-6.512 1.921-2.403 0-4.642-.708-6.52-1.926l1.24-1.582zm5.497-.492h-.447c-.117 0-.23-.04-.308-.109l-.593-.391h2.25l-.594.391c-.077.069-.19.109-.308.109zm-10.814-.838h-1.403c0-1.104.895-2 2-2h2c.53 0 1.039.211 1.414.586s.586.884.586 1.414h-1.403c-.196-.606-.755-.726-1.597-.726s-1.4.115-1.597.726zm11.737-.162h-2.279c-.138 0-.25-.112-.25-.25s.112-.25.25-.25h2.279c.138 0 .25.112.25.25s-.112.25-.25.25zm6.263 0h-1.403c0-1.105.895-2 2-2h2c.53 0 1.039.211 1.414.586s.586.883.586 1.414h-1.403c-.196-.606-.755-.726-1.597-.726s-1.4.115-1.597.726zm-7.586-.986h-1.414c-.013-2.57-1.403-2.878-1.403-4.647 0-1.695 1.327-2.852 3-2.852h.02c1.663.009 2.98 1.163 2.98 2.852 0 1.769-1.391 2.077-1.404 4.647h-1.414c0-2.735 1.318-3.614 1.318-4.651 0-.856-.694-1.333-1.5-1.348h-.019c-.798.022-1.481.499-1.481 1.348 0 1.037 1.317 1.916 1.317 4.651zm-8.817-5.852c1.242 0 2.25 1.008 2.25 2.25s-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25 1.008-2.25 2.25-2.25zm18-.162c1.242 0 2.25 1.008 2.25 2.25s-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25 1.008-2.25 2.25-2.25zm-5.13 2.386l1.349.612-.413.91-1.298-.588c.15-.3.275-.608.362-.934zm-7.739-.001c.087.332.208.631.36.935l-1.296.588-.414-.91 1.35-.613zm-5.131-.873c.497 0 .9.403.9.9s-.403.9-.9.9-.9-.403-.9-.9.403-.9.9-.9zm18-.162c.497 0 .9.403.9.9s-.403.9-.9.9-.9-.403-.9-.9.403-.9.9-.9zm-3.5.15h-1.501c.01-.335-.02-.673-.093-1h1.594v1zm-9.498 0h-1.502v-1h1.594c-.072.327-.102.663-.092.998v.002zm7.02-2.714l1.242-.882.579.816-1.252.888c-.146-.291-.335-.566-.569-.822zm-6.044-.001c-.23.252-.418.525-.569.823l-1.251-.888.578-.816 1.242.881zm4.435-1.046l.663-1.345.897.443-.664 1.345c-.278-.184-.58-.332-.896-.443zm-2.826-.001c-.315.11-.618.258-.897.442l-.663-1.343.897-.443.663 1.344zm-2.587-9.054v2.149c-2.938 1.285-5.141 3.942-5.798 7.158l-2.034-.003c.732-4.328 3.785-7.872 7.832-9.304zm8 0c4.047 1.432 7.1 4.976 7.832 9.304l-2.034.003c-.657-3.216-2.86-5.873-5.798-7.158v-2.149zm-3.5 8.847c-.334-.04-.654-.042-1-.002v-1.529h1v1.531zm-2.097-2.531h-1.403c0-1.105.895-2 2-2h2c.53 0 1.039.211 1.414.586s.586.883.586 1.414h-1.403c-.196-.606-.755-.726-1.597-.726s-1.4.115-1.597.726zm1.597-7c1.242 0 2.25 1.008 2.25 2.25s-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25 1.008-2.25 2.25-2.25zm0 1.35c.497 0 .9.403.9.9s-.403.9-.9.9-.9-.403-.9-.9.403-.9.9-.9z"/></svg>
                         </div>
-                        <h4>Vector Design</h4>
+                        <h4>Poster Design</h4>
                         <p>
-                            Various interesting vector designs such as food, items, etc.
+                            There are several poster design options such as food posters, promotions, issues, and others.
                         </p>
                     </div>
                 </div>
@@ -201,9 +209,9 @@
                             </div>
 
                             <div class="education-info">
-                                <h4 class="education-title">SMKN 4 GARUT</h4>
-                                <p>Graphic Designer</p>
-                                <h4 class="education-years">2022 - 2025</h4>
+                                <h4 class="education-title">SDN 4 WANAMEKAR</h4>
+                                <p></p>
+                                <h4 class="education-years"></h4>
                             </div>
                         </div>
                         
@@ -214,9 +222,9 @@
                             </div>
 
                             <div class="education-info">
-                                <h4 class="education-title">SMKN 4 GARUT</h4>
-                                <p>Graphic Designer</p>
-                                <h4 class="education-years">2022 - 2025</h4>
+                                <h4 class="education-title">SMPN 1 WANARAJA</h4>
+                                <p></p>
+                                <h4 class="education-years"></h4>
                             </div>
                         </div>
 
@@ -229,7 +237,7 @@
                             <div class="education-info">
                                 <h4 class="education-title">SMKN 4 GARUT</h4>
                                 <p>Graphic Designer</p>
-                                <h4 class="education-years">2022 - 2025</h4>
+                                <h4 class="education-years"></h4>
                             </div>
                         </div>
                     </div>
@@ -260,8 +268,89 @@
           <!-- End of skills and education -->
 
           <!-- Contact -->
-          <section id="contact"></section>
+           <section id="contact">
+            <div class="contact main-container">
+                <div class="contact-left">
+                    <form class="contact-form" action="https://formspree.io/f/xyzkrgyd" method="POST">
+                        <div>
+                            <input type="text" placeholder="Name" name="name" />
+                        </div>
+                        <div>
+                            <input type="email" placeholder="Email" name="email" />
+                          </div>
+                        <div>
+                            <textarea
+                            name="message"
+                            id="message"
+                            placeholder="Message"
+                            cols="30"
+                            rows="10"
+                            ></textarea>
+                        </div>
+                        <div>
+                            <button class="btn-submit">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="contact-right">
+
+                    <!-- contact 1-->
+                    <div class="contact-item">
+                        <div class="contact-item-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 1c-3.148 0-6 2.553-6 5.702 0 3.148 2.602 6.907 6 12.298 3.398-5.391 6-9.15 6-12.298 0-3.149-2.851-5.702-6-5.702zm0 8c-1.105 0-2-.895-2-2s.895-2 2-2 2 .895 2 2-.895 2-2 2zm12 14h-24l4-8h3.135c.385.641.798 1.309 1.232 2h-3.131l-2 4h17.527l-2-4h-3.131c.435-.691.848-1.359 1.232-2h3.136l4 8z"/></svg>
+                        </div>
+                        <div class="contact-item-detail">
+                            <h4>Address</h4>
+                            <p>01 Bebedahan Street, Wanamekar, Wanaraja, Garut North</p>
+                        </div>
+                    </div>
+
+                    <!-- contact 2 -->
+                    <div class="contact-item">
+                        <div class="contact-item-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/></svg>
+                        </div>
+                        <div class="contact-item-detail">
+                            <h4>Phone</h4>
+                            <p>(+62)-858-602-551-52</p>
+                        </div>
+                    </div>
+
+                    <!-- contact 3 -->
+                    <div class="contact-item">
+                        <div class="contact-item-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"/></svg>
+                        </div>
+                        <div class="contact-item-detail">
+                            <h4>Email</h4>
+                            <p>fakhrimuammar.m23@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           </section>
           <!-- End Contact -->
 
+          <!-- footer -->
+           <footer>
+            <div class="footer-icons">
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+            </a>
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg>
+            </a>
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
+            </a>
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+            </a>
+           </div>
+           <p>&#169; 2025 - Fakhri Muammar Miqdad </p>
+           </footer>
+          <!-- end of footer -->
+
+          <script src="js/script.js"></script>
     </body>
 </html>
